--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">MD.SOHARUB HOSSEN</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">ASP.NET DEVELOPER - PROBLEM SOLVER - BLOGGER</h2>
+        <h2 class="font-weight-light mb-0">Asp.Net Developer - Problem Solver - Blogger</h2>
       </div>
     </header>
 
