--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/algo.PNG" alt="">
+              <img class="img-fluid mb-5" src="img/portfolio/algo.png" alt="">
             </a>
           </div>
             
