--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
               <h2 class="text-secondary text-uppercase mb-0">Atm Banking System</h2>
               <hr class="container star-dark mb-5">
                 
-              <img class="img-fluid mb-5" src="img/portfolio/Atm1.png" style="width: 80%;height: auto" alt="">
-              <img class="img-fluid mb-5" src="img/portfolio/Atm2.png" style="width: 80%;height: auto" alt="">
-              <img class="img-fluid mb-5" src="img/portfolio/Atm3.png" style="width: 80%;height: auto" alt="">   
-              <img class="img-fluid mb-5" src="img/portfolio/Atm4.png" style="width: 80%;height:550px" alt="">    
+              <img class="img-fluid mb-5" src="img/portfolio/A1.png" style="width: 80%;height: auto" alt="">
+              <img class="img-fluid mb-5" src="img/portfolio/A2.PNG" style="width: 80%;height: auto" alt="">
+              <img class="img-fluid mb-5" src="img/portfolio/A3.PNG" style="width: 80%;height: auto" alt="">   
+              <img class="img-fluid mb-5" src="img/portfolio/A4.PNG" style="width: 80%;height:550px" alt="">    
                 
               <div align="left">
                 <p>
